refactor: migrate notebook and bookmark frontend actions from Prisma to backend API